# ruscal

./: .gitignore  Cargo.toml  LICENSE  PRIVACY.md  README.md  TERMS.md  build.rs
.github/workflows/: release.yml
docs/: SIGNING.md
installer/: ruscal.iss
src/: error.rs  event.rs  main.rs  state.rs  sync.rs  updater.rs
src/caldav/: mod.rs
src/google/: auth.rs  calendar.rs  mod.rs
src/outlook/: calendar.rs  mod.rs  props.rs  session.rs
ui/: app.slint
