[package]
name = "ruscal"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_System_AddressBook",
    "Win32_System_Mapi",
] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
dirs = "5"
libloading = "0.8"
hex = "0.4"
