[package]
name = "ruscal"
version = "0.0.0"
edition = "2024"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_System_AddressBook",
    "Win32_System_Mapi",
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_Globalization",
] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
dirs = "5"
libloading = "0.8"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "native-tls"] }
sha2 = "0.10"
rand = "0.8"
open = "5"
dotenvy = "0.15"
git-version = "0.3"
roxmltree = "0.20"
resvg = "0.44"
slint = { version = "1", features = ["live-preview"] }
tray-icon = "0.21"
muda = "0.15"

[build-dependencies]
slint-build = "1"
ico         = "0.3"
image       = { version = "0.25", default-features = false, features = ["png"] }
winresource = "0.1"
